# i2t

./: .gitignore  LICENSE  README.md  blip_caption.py  pyproject.toml  requirements.txt  setup.py  setup_blip_mps.py  setup_env.sh  smoke_test.sh
.cursor/rules/: cli-usage.mdc  project-structure.mdc  services.mdc
src/i2t/: cli.py  service.py
